.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

3.3.6 - Unreleased
------------------

- Fixed wrong condition and double definition on join_form where
  allowEnterPassword meant you were actually *not* allowed to enter a
  password.  It worked fine but was confusingly stated the wrong way
  around.
  [maurits]

- MembershipTool.setPassword unnecessarily called the role assigner plugins
  through acl_users.doChangeUser. Now use acl_users.userSetPassword directly.
  [vincentfretin]

- "(Requires Javascript)" is now translatable in accessibility-info.pt.
  This closes http://dev.plone.org/plone/ticket/10475
  [vincentfretin]

- Explicitly check that a searchterm was provided before adding it to the
  query string. This closes
  http://dev.plone.org/plone/ticket/9025
  [blueaidan]

- Fixed for state changed message is wroning for pending item. This closes
  http://dev.plone.org/plone/ticket/10245
  [terapyon]

- Altered table of contents javascript so that comments are not displayed.
  [dbfrombrc]

- "Event when" improved for better i18n.  
  This closes http://dev.plone.org/plone/ticket/10196
  [gotcha]

- Nested groups appear again in prefs_group_members. This was broken since
  Plone 3.3.2. This closes http://dev.plone.org/plone/ticket/10075
  [vincentfretin]

- Fixed getIcon. 'Find and Catalog' works again.
  This closes http://dev.plone.org/plone/ticket/8235
  [amleczko]

- Added missing event parameter to inputlabel's blur handler. This closes
  http://dev.plone.org/plone/ticket/10369
  [mj]


3.3.5 - March 3rd, 2010
-----------------------

- Check for existance of a hash in the location before attempting to scroll to
  that location in toc.js. Fixes bug introduced in r32066, and refs
  http://dev.plone.org/plone/ticket/9364
  [dunlapm]

- default_error_message page adds the error code in the subject